--- a/movie_recommendation.ipynb
+++ b/movie_recommendation.ipynb
@@ -17,6 +17,7 @@
     "import pandas as pd\n",
     "import json\n",
     "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
@@ -204,7 +205,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Titan A.E.\n",
+      "Small Soldiers\n",
+      "Aliens vs Predator: Requiem\n",
+      "Independence Day\n",
+      "Battle: Los Angeles\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend('Avatar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,6 +235,13 @@
     "pickle.dump(new_df, open('new_df.pkl', 'wb'))\n",
     "pickle.dump(similarity, open('similarity.pkl', 'wb'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
